@@ -30,6 +30,8 @@ Changes in version 3.2 M2 (2012-08-xx)
 * introduced support for single, unqualified tx manager in the TestContext framework (SPR-9645)
 * introduced support for TransactionManagementConfigurer in the TestContext framework (SPR-9604)
 * introduced MockEnvironment in the spring-test module (SPR-9492)
+* deprecated SimpleJdbcTestUtils in favor of JdbcTestUtils (SPR-9235)
+* introduced countRowsInTableWhere() and dropTables() in JdbcTestUtils (SPR-9235)
 
 
 Changes in version 3.2 M1 (2012-05-28)
